--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "require": {
         "php": "^8.0",
         "fideloper/proxy": "^4.4",
+        "friendsofphp/php-cs-fixer": "^2.18",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.3.5",
+        "inertiajs/inertia-laravel": "^0.4.1",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
@@ -61,6 +62,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "lint": [
+            "./vendor/bin/php-cs-fixer fix"
         ]
     }
 }
