--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
         "@tailwindcss/typography": "^0.4.0",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
+        "eslint": "^7.23.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-vue": "^7.8.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
+        "prettier": "^1.19.1",
         "tailwindcss": "^2.0.1",
         "vue": "^2.5.17",
         "vue-loader": "^15.9.6",
