--- a/.env.testing.example
+++ b/.env.testing.example
@@ -7,12 +7,8 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=pgsql
-DB_PORT=5432
-DB_DATABASE=jeopardy_score
-DB_USERNAME=root
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,7 +18,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
