--- a/.env.testing.example
+++ b/.env.testing.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:kHU2/9+4/lX+BNqNOTr3d+FbYe3g2JRYP5Qyilj9P3Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
